Updated main.yml with TG_SESSION

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -24,7 +24,7 @@ jobs:
         env: 
           TG_API_ID: ${{ secrets.TG_API_ID }}
           TG_API_HASH: ${{ secrets.TG_API_HASH }}
-          SESSION_NAME: ${{ secrets.SESSION_NAME }}
+          TG_SESSION: ${{ secrets.TG_SESSION }}
           TG_BOT_TOKEN: ${{ secrets.TG_BOT_TOKEN }}
           TG_CHAT_ID: ${{ secrets.TG_CHAT_ID }}
           DS_API_KEY: ${{ secrets.DS_API_KEY }}
